# openEnergize

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml  exampleconfig.yaml  sonar-project.properties
.github/workflows/: angular-app.yml  python-app.yml
backend/: .dockerignore  .gitignore  Configuration.py  ConsumerTrigger.py  Dockerfile  README.md  app.py  configuration.yaml  debugconfig.yaml  pyproject.toml  requirements.txt
backend/consumer_adapters/: AbstractConsumerAdapter.py  ConstantValueConsumerAdapter.py  FakeControllableConsumerAdapter.py  InfluxDbConsumerAdapter.py  ModbusConsumerAdapter.py  SGReadyConsumerAdapter.py  SGreadyConsumerAdapter.py  VzugHomeConsumerAdapter.py  VzugWashingMachineConsumerAdapter.py  __init__.py
backend/endpoints/: __init__.py  configuration.py  consumers.py  events.py  producers.py  storages.py  totals.py
backend/producer_adapters/: AbstractProducerAdapter.py  ConstantValueProducerAdapter.py  ModbusProducerAdapter.py  __init__.py
backend/storage_adapters/: AbstractStorageAdapter.py  ConstantValueStorageAdapter.py  VartaBatteryStorageAdapter.py  __init__.py
backend/test/: test_AbstractConsumerAdapter.py  test_AbstractProducerAdapter.py  test_AbstractStorageAdapter.py  test_configuration.py  test_consumers.py  test_events.py  test_producers.py  test_storages.py  test_totals.py
doc/: Configuration.md  Quickstart.md  README.md
frontend/: .dockerignore  Dockerfile  README.md  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  manifest.json  styles.scss
(+76 files in other folders)
